Secure device authorization config
